--- a/View/Macro/PortalTemplate.html.twig
+++ b/View/Macro/PortalTemplate.html.twig
@@ -179,12 +179,11 @@
     {% endfor %}
 {% endmacro %}
 
-{% macro topMenuSmall(fsc, i18n, webTitle) %}
-    <div class="dropdown">
+{% macro topMenuSmall(fsc, i18n) %}
+    <div class="dropdown show-sm">
         <a href="#" class="btn dropdown-toggle" tabindex="0">
             <i class="fas fa-bars fa-fw" aria-hidden="true"></i>
         </a>
-        &nbsp; {{ webTitle }}
         <ul class="menu">
             {% for menuKey, menuItem in fsc.menuComposer.getTopMenu() %}
                 {% if menuItem is iterable %}
