--- a/View/Master/SectionController.html.twig
+++ b/View/Master/SectionController.html.twig
@@ -1,6 +1,6 @@
 {% extends "Master/PortalTemplate.html.twig" %}
 
-{% block navbarButtons %}
+{% block navbarButtonsLeft %}
     {# -- Options button -- #}
     {% if fsc.user %}
         <div class="dropdown">
@@ -29,46 +29,26 @@
 {% endblock %}
 
 {% block body %}
-    {% import _self as macros %}
-
     <div class="body-section">
-        {{ macros.navigationLinks(fsc.navigationLinks) }}
+        {% block navigationLinks %}
+            {{ _self.navigationLinks(fsc.navigationLinks, fsc.title) }}
+        {% endblock %}
         <div class="container">
             <div class="columns">
-                {% if fsc.getSectionGroups() | length > 1 %}
+                {% if fsc.sections | length > 1 %}
                     <div class="column col-2 col-lg-12">
-                        <h1 class="h5">{{ fsc.title }}</h1>
                         {# -- Section selector -- #}
-                        {{ macros.sectionsButtons(fsc, i18n) }}
-                    </div>
-                {% elseif fsc.sections | length > 1 %}
-                    <div class="column col-12 mb-2">
-                        <h1 class="h5">{{ fsc.title }}</h1>
-                        {# -- Section tabs -- #}
-                        {{ macros.sectionsButtonsTabs(fsc, i18n) }}
-                    </div>
-                {% else %}
-                    <div class="column col-12 mb-2">
-                        <h1 class="h5">{{ fsc.title }}</h1>
+                        {{ _self.sectionsButtons(fsc, i18n) }}
                     </div>
                 {% endif %}
                 <div class="column">
                     {# -- Section content -- #}
-                    {% for name, group in fsc.getSectionGroups() %}
-                        {% for sectionName, section in group %}
-                            {% set divClass = (sectionName == fsc.active) ? '' : 'd-hide' %}
-                            <div id="secDiv{{ sectionName }}" class="section-div {{ divClass }}">
-                                <div class="show-lg mb-2">
-                                    {% if name == '' %}
-                                        {{ section.title }}
-                                    {% else %}
-                                        {{ i18n.trans(name) }} / {{ section.title }}
-                                    {% endif %}
-                                </div>
-                                {{ fsc.setCurrentSection(sectionName) }}
-                                {% include section.template %}
-                            </div>
-                        {% endfor %}
+                    {% for sectionName, section in fsc.sections %}
+                        {% set divClass = (sectionName == fsc.active) ? '' : 'd-hide' %}
+                        <div id="secDiv{{ sectionName }}" class="section-div {{ divClass }}">
+                            {{ fsc.setCurrentSection(sectionName) }}
+                            {% include section.template %}
+                        </div>
                     {% endfor %}
                 </div>
             </div>
@@ -80,11 +60,8 @@
     {{ parent() }}
     <script type="text/javascript">
         function showSection(name) {
-            $(".section-btn").removeClass("btn-primary");
-            $("#secBtn" + name).addClass("btn-primary");
-
-            $(".section-tab").removeClass("active");
-            $("#secBtn" + name + "2").addClass("active");
+            $(".section-btn").removeClass("active");
+            $("#secBtn" + name).addClass("active");
 
             $(".section-div").removeClass("d-hide");
             $(".section-div").addClass("d-hide");
@@ -97,7 +74,7 @@
                 $("#form" + formName + " :input[name=\"action\"]").val("delete");
                 $("#form" + formName).submit();
             }
-
+            
             return false;
         }
         function showSectionPage(name, offset) {
@@ -136,37 +113,26 @@
     </script>
 {% endblock %}
 
-{% macro navigationLinks(links) %}
-    {% if links | length > 0 %}
-        <div class="container">
-            <div class="columns">
-                <div class="column text-center">
-                    <ul class="breadcrumb">
-                        {% for link in links %}
-                            <li class="breadcrumb-item">
-                                <a href="{{ link.url }}">{{ link.title }}</a>
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </div>
+{% macro navigationLinks(links, title) %}
+    <div class="container">
+        <div class="columns">
+            <div class="column">
+                <ul class="breadcrumb">
+                    {% for link in links %}
+                        <li class="breadcrumb-item">
+                            <a href="{{ link.url }}">{{ link.title }}</a>
+                        </li>
+                    {% endfor %}
+                    <li class="breadcrumb-item">
+                        <h1>{{ title }}</h1>
+                    </li>
+                </ul>
             </div>
         </div>
-    {% endif %}
+    </div>
 {% endmacro %}
 
 {% macro sectionsButtons(fsc, i18n) %}
-    {% import _self as macros %}
-
-    <div class="hide-lg">
-        {{ macros.sectionsButtonsButtons(fsc, i18n) }}
-    </div>
-    {# -- Smartphone section -- #}
-    <div class="show-lg mb-2">
-        {{ macros.sectionsButtonsTabs(fsc, i18n) }}
-    </div>
-{% endmacro %}
-
-{% macro sectionsButtonsButtons(fsc, i18n) %}
     {% for name, group in fsc.getSectionGroups() %}
         <details class="accordion" open>
             <summary class="accordion-header">
@@ -185,7 +151,7 @@
                                     <label class="label label-primary">{{ section.count }}</label>
                                 </div>
                             {% endif %}
-                            <a href="#" id="secBtn{{ sectionName }}" class="section-tab {{ tabClass }}" onclick="return showSection('{{ sectionName }}');">
+                            <a href="#" id="secBtn{{ sectionName }}" class="section-btn {{ tabClass }}" onclick="return showSection('{{ sectionName }}');">
                                 <i class="{{ section.icon }} fa-fw" aria-hidden="true"></i>
                                 {{ section.title }}
                             </a>
@@ -195,27 +161,4 @@
             </div>
         </details>
     {% endfor %}
-{% endmacro %}
-
-{% macro sectionsButtonsTabs(fsc, i18n) %}
-    <ul class="tab">
-        {% for name, group in fsc.getSectionGroups() %}
-            {% for sectionName, section in group %}
-                {% set tabClass = (sectionName == fsc.active) ? 'active' : '' %}
-                <li class="tab-item">
-                    {% if section.count > 0 %}
-                        <a href="#" id="secBtn{{ sectionName }}2" class="section-tab {{ tabClass }} badge" data-badge="{{ section.count }}" onclick="return showSection('{{ sectionName }}');">
-                            <i class="{{ section.icon }} fa-fw" aria-hidden="true"></i>
-                            <span class="hide-lg">{{ section.title }}</span>
-                        </a>
-                    {% else %}
-                        <a href="#" id="secBtn{{ sectionName }}2" class="section-tab {{ tabClass }}" onclick="return showSection('{{ sectionName }}');">
-                            <i class="{{ section.icon }} fa-fw" aria-hidden="true"></i>
-                            <span class="hide-lg">{{ section.title }}</span>
-                        </a>
-                    {% endif %}
-                </li>
-            {% endfor %}
-        {% endfor %}
-    </ul>
 {% endmacro %}
