Improved responsive support.

--- a/View/Section/ListSection.html.twig
+++ b/View/Section/ListSection.html.twig
@@ -20,10 +20,10 @@
                         </a>
                     {% endif %}
                 </div>
-                <div class="column col-3 col-sm-12 mb-2">
+                <div class="column col-3 col-md-12 mb-2">
                     {{ macros.sectionSearch(section, i18n) }}
                 </div>
-                <div class="column col-3 col-sm-12 mb-2">
+                <div class="column col-3 col-md-12 mb-2">
                     {{ macros.sectionOrder(section) }}
                 </div>
             </div>
