--- a/Assets/CSS/webportal.css
+++ b/Assets/CSS/webportal.css
@@ -68,7 +68,7 @@ p {
     word-wrap: break-word;
 }
 
-.accordion {
+.accordion-box {
     box-shadow: 1px 2px 3px silver;
     margin-bottom: 10px;
 }
@@ -93,7 +93,7 @@ p {
     z-index: 500;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
     .custom-scroll {
         overflow-x: auto;
         overflow-y: hidden;
