--- a/View/Master/SectionController.html.twig
+++ b/View/Master/SectionController.html.twig
@@ -38,7 +38,12 @@
                 {% if fsc.sections | length > 1 %}
                     <div class="column col-2 col-lg-12">
                         {# -- Section selector -- #}
-                        {{ _self.sectionsButtons(fsc, i18n) }}
+                        <div class="hide-lg">
+                            {{ _self.sectionsButtons(fsc, i18n) }}
+                        </div>
+                        <div class="show-lg">
+                            {{ _self.sectionSelector(fsc, i18n) }}
+                        </div>
                     </div>
                 {% endif %}
                 <div class="column">
@@ -62,7 +67,9 @@
         function showSection(name) {
             $(".section-btn").removeClass("active");
             $("#secBtn" + name).addClass("active");
-
+            $("#secBtn" + name + "2").addClass("active");
+            $("#sectionSelector").html($("#secBtn" + name).html());
+            
             $(".section-div").removeClass("d-hide");
             $(".section-div").addClass("d-hide");
             $("#secDiv" + name).removeClass("d-hide");
@@ -134,9 +141,12 @@
 
 {% macro sectionsButtons(fsc, i18n) %}
     {% for name, group in fsc.getSectionGroups() %}
-        <details class="accordion" open>
+        <details class="accordion accordion-box" open>
             <summary class="accordion-header">
-                {% if name != '' %}
+                {% if name == '' %}
+                    <div class="divider" data-content="{{ i18n.trans('sections') }}">
+                    </div>
+                {% else %}
                     <div class="divider" data-content="{{ i18n.trans(name) }}">
                     </div>
                 {% endif %}
@@ -144,14 +154,14 @@
             <div class="accordion-body">
                 <ul class="menu menu-nav">
                     {% for sectionName, section in group %}
-                        {% set tabClass = (sectionName == fsc.active) ? 'active' : '' %}
                         <li class="menu-item">
                             {% if section.count > 0 %}
                                 <div class="menu-badge">
                                     <label class="label label-primary">{{ section.count }}</label>
                                 </div>
                             {% endif %}
-                            <a href="#" id="secBtn{{ sectionName }}" class="section-btn {{ tabClass }}" onclick="return showSection('{{ sectionName }}');">
+                            {% set btnClass = (sectionName == fsc.active) ? 'active' : '' %}
+                            <a href="#" id="secBtn{{ sectionName }}" class="section-btn {{ btnClass }}" onclick="return showSection('{{ sectionName }}');">
                                 <i class="{{ section.icon }} fa-fw" aria-hidden="true"></i>
                                 {{ section.title }}
                             </a>
@@ -161,4 +171,59 @@
             </div>
         </details>
     {% endfor %}
+{% endmacro %}
+
+{% macro sectionSelector(fsc, i18n) %}
+    <a href="#" class="btn btn-link" onclick="return showModal('modalSectionSelector');">
+        <i class="fas fa-caret-left fa-fw" aria-hidden="true"></i>
+    </a>
+    <a href="#" id="sectionSelector" class="btn btn-link" onclick="return showModal('modalSectionSelector');">
+        {% for sectionName, section in fsc.sections %}
+            {% if sectionName == fsc.active %}
+                <i class="{{ section.icon }} fa-fw" aria-hidden="true"></i>
+                {{ section.title }}
+            {% endif %}
+        {% endfor %}
+    </a>
+    <a href="#" class="btn btn-link" onclick="return showModal('modalSectionSelector');">
+        <i class="fas fa-caret-right fa-fw" aria-hidden="true"></i>
+    </a>
+    <div id="modalSectionSelector" class="modal modal-sm">
+        <a href="#close" class="modal-overlay" aria-label="Close" onclick="return hideModal('modalSectionSelector');"></a>
+        <div class="modal-container">
+            <div class="modal-header">
+                <a href="#close" class="btn btn-clear float-right" aria-label="Close" onclick="return hideModal('modalSectionSelector');"></a>
+                <div class="modal-title h5">{{ i18n.trans('sections') }}</div>
+            </div>
+            <div class="mb-2">
+                {% for name, group in fsc.getSectionGroups() %}
+                    <details class="accordion" open>
+                        <summary class="accordion-header">
+                            {% if name != '' %}
+                                <i class="fas fa-caret-down fa-fw" aria-hidden="true"></i> {{ i18n.trans(name) }}
+                            {% endif %}
+                        </summary>
+                        <div class="accordion-body">
+                            <ul class="menu menu-nav">
+                                {% for sectionName, section in group %}
+                                    <li class="menu-item">
+                                        {% if section.count > 0 %}
+                                            <div class="menu-badge">
+                                                <label class="label label-primary">{{ section.count }}</label>
+                                            </div>
+                                        {% endif %}
+                                        {% set btnClass = (sectionName == fsc.active) ? 'active' : '' %}
+                                        <a href="#" id="secBtn{{ sectionName }}2" class="section-btn {{ btnClass }}" onclick="showSection('{{ sectionName }}');return hideModal('modalSectionSelector');">
+                                            <i class="{{ section.icon }} fa-fw" aria-hidden="true"></i>
+                                            {{ section.title }}
+                                        </a>
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </details>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
 {% endmacro %}
