Improved user menu.

--- a/View/Master/SectionController.html.twig
+++ b/View/Master/SectionController.html.twig
@@ -3,7 +3,7 @@
 {% block navbarButtonsRight %}
     {# -- Options button -- #}
     {% if fsc.user %}
-        <div class="dropdown">
+        <div class="dropdown dropdown-right">
             <a href="#" class="btn dropdown-toggle">
                 <i class="fas fa-wrench fa-fw" aria-hidden="true"></i>
             </a>
