--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -57,15 +57,32 @@
                     {% block navbarButtonsRight %}
                     {% endblock %}
                     {% if fsc.user %}
-                        <a class="btn" href="{{ constant('FS_ROUTE') }}/{{ fsc.webPage.url('edit') }}">
-                            <i class="fas fa-edit fa-fw" aria-hidden="true"></i>
-                        </a>
-                        &nbsp;
-                        <a class="btn btn-success" href="{{ constant('FS_ROUTE') }}/ListWebPage">
-                            <i class="fas fa-sign-in-alt fa-fw" aria-hidden="true"></i>
-                        </a>
+                        <div class="dropdown dropdown-right">
+                            <a href="#" class="btn btn-primary dropdown-toggle">
+                                <i class="fas fa-cog fa-fw" aria-hidden="true"></i>
+                            </a>
+                            <ul class="menu">
+                                <li class="menu-item">
+                                    <a href="{{ constant('FS_ROUTE') }}/EditProfile">
+                                        <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i> {{ fsc.contact.alias() }}
+                                    </a>
+                                </li>
+                                <li class="divider">
+                                </li>
+                                <li class="menu-item">
+                                    <a href="{{ constant('FS_ROUTE') }}/{{ fsc.webPage.url('edit') }}">
+                                        <i class="fas fa-edit fa-fw" aria-hidden="true"></i> {{ i18n.trans('edit') }}
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="{{ constant('FS_ROUTE') }}/ListWebPage">
+                                        <i class="fas fa-sign-in-alt fa-fw" aria-hidden="true"></i> {{ i18n.trans('pages') }}
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     {% elseif fsc.contact %}
-                        <a class="btn btn-success" href="#" onclick="return showModal('logoutModal');">
+                        <a class="btn btn-primary" href="#" onclick="return showModal('logoutModal');">
                             <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i>
                             <span class="hide-md">{{ fsc.contact.alias() }}</span>
                         </a>
