--- a/View/Section/EditProfile.html.twig
+++ b/View/Section/EditProfile.html.twig
@@ -1,3 +1,4 @@
+<br/>
 <div class="container">
     <div class="columns">
         <div class="column col-2 col-sm-12 text-right">
@@ -12,126 +13,131 @@
             {% endblock %}
         </div>
         <div class="column">
-            <h1 class="h3">{{ fsc.contact.email }}</h1>
-            <form method="post">
-                <input type="hidden" name="action" value="edit"/>
-                <div class="columns">
-                    <div class="column col-3 col-sm-12">
-                        <div class="form-group mb-2">
-                            {{ i18n.trans('name') }}
-                            <input class="form-input" type="text" name="nombre" value="{{ fsc.contact.nombre }}" autocomplete="off" required=""/>
-                        </div>
-                    </div>
-                    <div class="column col-5 col-sm-12">
-                        <div class="form-group mb-2">
-                            {{ i18n.trans('surname') }}
-                            <input class="form-input" type="text" name="apellidos" value="{{ fsc.contact.apellidos }}" autocomplete="off"/>
-                        </div>
-                    </div>
-                    <div class="column col-2 col-sm-12">
-                        <div class="form-group mb-2">
-                            {{ i18n.trans('fiscal-id') }}
-                            <select class="form-select" name="tipoidfiscal">
-                                {% for tipo in fsc.codeModel.all('IdentificadorFiscal', '', '') %} 
-                                    {% if tipo.code == fsc.contact.tipoidfiscal %}
-                                        <option value="{{ tipo.code }}" selected="">{{ tipo.description }}</option>
-                                    {% else %}
-                                        <option value="{{ tipo.code }}">{{ tipo.description }}</option>
-                                    {% endif %}
-                                {% endfor %}
-                            </select>
-                        </div>
-                    </div>
-                    <div class="column col-2 col-sm-12">
-                        <div class="form-group mb-2">
-                            {{ i18n.trans('fiscal-number') }}
-                            <input class="form-input" type="text" name="cifnif" value="{{ fsc.contact.cifnif }}" autocomplete="off"/>
-                        </div>
-                    </div>
-                    <div class="column col-6 col-sm-12">
-                        <div class="form-group mb-2">
-                            {{ i18n.trans('address') }}
-                            <input class="form-input" type="text" name="direccion" value="{{ fsc.contact.direccion }}" autocomplete="off"/>
-                        </div>
-                    </div>
-                    <div class="column col-3 col-sm-12">
-                        <div class="form-group mb-2">
-                            {{ i18n.trans('post-office-box') }}
-                            <input class="form-input" type="text" name="apartado" value="{{ fsc.contact.apartado }}" maxlength="10" placeholder="{{ i18n.trans('optional') }}" autocomplete="off"/>
-                        </div>
-                    </div>
-                    <div class="column col-3 col-sm-12">
-                        <div class="form-group mb-2">
-                            {{ i18n.trans('zip-code') }}
-                            <input class="form-input" type="text" name="codpostal" value="{{ fsc.contact.codpostal }}" maxlength="10" autocomplete="off"/>
-                        </div>
-                    </div>
-                    <div class="column col-4 col-sm-12">
-                        <div class="form-group mb-2">
-                            {{ i18n.trans('city') }}
-                            <input class="form-input" type="text" name="ciudad" value="{{ fsc.contact.ciudad }}" autocomplete="off"/>
-                        </div>
-                    </div>
-                    <div class="column col-4 col-sm-12">
-                        <div class="form-group mb-2">
-                            {{ i18n.trans('province') }}
-                            <input class="form-input" type="text" name="provincia" value="{{ fsc.contact.provincia }}" autocomplete="off"/>
-                        </div>
-                    </div>
-                    <div class="column col-4 col-sm-12">
-                        <div class="form-group mb-2">
-                            {{ i18n.trans('country') }}
-                            <select class="form-select" name="codpais">
-                                {% for pais in fsc.codeModel.all('Pais', '', '') %} 
-                                    {% if pais.code == fsc.contact.codpais %}
-                                        <option value="{{ pais.code }}" selected="">{{ pais.description }}</option>
-                                    {% else %}
-                                        <option value="{{ pais.code }}">{{ pais.description }}</option>
-                                    {% endif %}
-                                {% endfor %}
-                            </select>
-                        </div>
-                    </div>
-                    <div class="column col-6 col-sm-12">
-                        <div class="form-group mb-2">
-                            {{ i18n.trans('new-password') }}
-                            <div class="input-group">
-                                <span class="input-group-addon">
-                                    <i class="fas fa-key fa-fw"></i>
-                                </span>
-                                <input class="form-input" type="password" name="newPassword" placeholder="{{ i18n.trans('optional') }}" autocomplete="off"/>
+            <div class="card">
+                <div class="card-header">
+                    <h1 class="h3">{{ fsc.contact.email }}</h1>
+                </div>
+                <div class="card-footer">
+                    <form method="post">
+                        <input type="hidden" name="action" value="edit"/>
+                        <div class="columns">
+                            <div class="column col-3 col-sm-12">
+                                <div class="form-group mb-2">
+                                    {{ i18n.trans('name') }}
+                                    <input class="form-input" type="text" name="nombre" value="{{ fsc.contact.nombre }}" autocomplete="off" required=""/>
+                                </div>
+                            </div>
+                            <div class="column col-5 col-sm-12">
+                                <div class="form-group mb-2">
+                                    {{ i18n.trans('surname') }}
+                                    <input class="form-input" type="text" name="apellidos" value="{{ fsc.contact.apellidos }}" autocomplete="off"/>
+                                </div>
+                            </div>
+                            <div class="column col-2 col-sm-12">
+                                <div class="form-group mb-2">
+                                    {{ i18n.trans('fiscal-id') }}
+                                    <select class="form-select" name="tipoidfiscal">
+                                        {% for tipo in fsc.codeModel.all('IdentificadorFiscal', '', '') %} 
+                                            {% if tipo.code == fsc.contact.tipoidfiscal %}
+                                                <option value="{{ tipo.code }}" selected="">{{ tipo.description }}</option>
+                                            {% else %}
+                                                <option value="{{ tipo.code }}">{{ tipo.description }}</option>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="column col-2 col-sm-12">
+                                <div class="form-group mb-2">
+                                    {{ i18n.trans('fiscal-number') }}
+                                    <input class="form-input" type="text" name="cifnif" value="{{ fsc.contact.cifnif }}" autocomplete="off"/>
+                                </div>
+                            </div>
+                            <div class="column col-6 col-sm-12">
+                                <div class="form-group mb-2">
+                                    {{ i18n.trans('address') }}
+                                    <input class="form-input" type="text" name="direccion" value="{{ fsc.contact.direccion }}" autocomplete="off"/>
+                                </div>
+                            </div>
+                            <div class="column col-3 col-sm-12">
+                                <div class="form-group mb-2">
+                                    {{ i18n.trans('post-office-box') }}
+                                    <input class="form-input" type="text" name="apartado" value="{{ fsc.contact.apartado }}" maxlength="10" placeholder="{{ i18n.trans('optional') }}" autocomplete="off"/>
+                                </div>
+                            </div>
+                            <div class="column col-3 col-sm-12">
+                                <div class="form-group mb-2">
+                                    {{ i18n.trans('zip-code') }}
+                                    <input class="form-input" type="text" name="codpostal" value="{{ fsc.contact.codpostal }}" maxlength="10" autocomplete="off"/>
+                                </div>
+                            </div>
+                            <div class="column col-4 col-sm-12">
+                                <div class="form-group mb-2">
+                                    {{ i18n.trans('city') }}
+                                    <input class="form-input" type="text" name="ciudad" value="{{ fsc.contact.ciudad }}" autocomplete="off"/>
+                                </div>
+                            </div>
+                            <div class="column col-4 col-sm-12">
+                                <div class="form-group mb-2">
+                                    {{ i18n.trans('province') }}
+                                    <input class="form-input" type="text" name="provincia" value="{{ fsc.contact.provincia }}" autocomplete="off"/>
+                                </div>
+                            </div>
+                            <div class="column col-4 col-sm-12">
+                                <div class="form-group mb-2">
+                                    {{ i18n.trans('country') }}
+                                    <select class="form-select" name="codpais">
+                                        {% for pais in fsc.codeModel.all('Pais', '', '') %} 
+                                            {% if pais.code == fsc.contact.codpais %}
+                                                <option value="{{ pais.code }}" selected="">{{ pais.description }}</option>
+                                            {% else %}
+                                                <option value="{{ pais.code }}">{{ pais.description }}</option>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="column col-6 col-sm-12">
+                                <div class="form-group mb-2">
+                                    {{ i18n.trans('new-password') }}
+                                    <div class="input-group">
+                                        <span class="input-group-addon">
+                                            <i class="fas fa-key fa-fw"></i>
+                                        </span>
+                                        <input class="form-input" type="password" name="newPassword" placeholder="{{ i18n.trans('optional') }}" autocomplete="off"/>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="column col-6 col-sm-12">
+                                <div class="form-group mb-2">
+                                    {{ i18n.trans('repeat-new-password') }}
+                                    <div class="input-group">
+                                        <span class="input-group-addon">
+                                            <i class="fas fa-key fa-fw"></i>
+                                        </span>
+                                        <input class="form-input" type="password" name="newPassword2" placeholder="{{ i18n.trans('optional') }}" autocomplete="off"/>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="column col-6 col-sm-12">
-                        <div class="form-group mb-2">
-                            {{ i18n.trans('repeat-new-password') }}
-                            <div class="input-group">
-                                <span class="input-group-addon">
-                                    <i class="fas fa-key fa-fw"></i>
-                                </span>
-                                <input class="form-input" type="password" name="newPassword2" placeholder="{{ i18n.trans('optional') }}" autocomplete="off"/>
+                        <div class="columns mt-2">
+                            <div class="column">
+                                <button type="button" class="btn btn-error" onclick="return showModal('modalDeleteAccount');">
+                                    {{ i18n.trans('delete') }}
+                                </button>
+                            </div>
+                            <div class="column text-right">
+                                <button type="submit" class="btn btn-primary">
+                                    {{ i18n.trans('save') }}
+                                </button>
                             </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
-                <div class="columns mt-2">
-                    <div class="column">
-                        <button type="button" class="btn btn-error" onclick="return showModal('modalDeleteAccount');">
-                            {{ i18n.trans('delete') }}
-                        </button>
-                    </div>
-                    <div class="column text-right">
-                        <button type="submit" class="btn btn-primary">
-                            {{ i18n.trans('save') }}
-                        </button>
-                    </div>
-                </div>
-            </form>
+            </div>
         </div>
     </div>
 </div>
-
 <br/>
 
 <div id="modalDeleteAccount" class="modal modal-sm">
