Minor template improvements.

--- a/View/Macro/PortalTemplate.html.twig
+++ b/View/Macro/PortalTemplate.html.twig
@@ -122,7 +122,7 @@
                 </p>
             </div>
             <div class="modal-body">
-                <a href="{{ constant('FS_ROUTE') }}/EditProfile" class="btn btn-block btn-success">
+                <a href="{{ constant('FS_ROUTE') }}/EditProfile" class="btn btn-block">
                     {{ i18n.trans('my-profile') }}
                 </a>
                 <p class="form-input-hint mb-2 mt-2">
