--- a/View/Macro/PortalTemplate.html.twig
+++ b/View/Macro/PortalTemplate.html.twig
@@ -181,7 +181,7 @@
 
 {% macro topMenuSmall(fsc, i18n) %}
     <div class="dropdown show-sm">
-        <a href="#" class="btn dropdown-toggle" tabindex="0">
+        <a href="#" class="btn btn-link dropdown-toggle" tabindex="0">
             <i class="fas fa-bars fa-fw" aria-hidden="true"></i>
         </a>
         <ul class="menu">
